# vlx

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  publish.yml
docs/: troubleshooting.md
docs/plans/: 2026-03-27-vx-implementation.md
docs/specs/: 2026-03-27-vx-design.md
docs/superpowers/plans/: 2026-04-03-multi-backend.md
docs/superpowers/specs/: 2026-04-03-multi-backend-design.md
src/vlx/: cli.py  config.py  fan.py  gpu.py  lock.py  probe.py  serve.py  variants.py  welcome.sh
src/vserve/: __init__.py  bench.py  cli.py  config.py  fan.py  gpu.py  lock.py  model_files.py  models.py  probe.py  runtime.py  serve.py  tools.py  variants.py  version.py  welcome.sh
src/vserve/backends/: __init__.py  llamacpp.py  protocol.py  vllm.py
src/vx/: cli.py  compare.py  config.py  fan.py  gpu.py  models.py  probe.py  serve.py  tune.py
tests/: conftest.py  test_backends.py  test_bench.py  test_cli.py  test_cli_tune.py  test_compare.py  test_config.py  test_fan.py  test_gpu.py  test_imports.py  test_llamacpp.py  test_lock.py  test_models.py  test_pick.py  test_probe.py  test_runtime.py  test_serve.py  test_tools.py  test_tune.py  test_variants.py  test_version.py  test_welcome.py
