[project]
name = "vserve"
version = "0.5.2a3"
description = "CLI for managing LLM inference on GPU workstations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Mohan Qiao" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: GPU :: NVIDIA CUDA",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.15",
    "rich>=14",
    "huggingface-hub>=0.30",
    "pyyaml>=6",
    "nvidia-ml-py>=13.595.45",
    "simple-term-menu>=1.6",
    "packaging>=24",
]

[project.optional-dependencies]
llamacpp = ["gguf>=0.6"]

[dependency-groups]
dev = ["pytest>=8", "pytest-mock>=3", "ruff>=0.15", "mypy>=1.15", "types-PyYAML>=6", "types-requests>=2.33"]

[project.urls]
Homepage = "https://github.com/Gavin-Qiao/vserve"
Repository = "https://github.com/Gavin-Qiao/vserve"
Issues = "https://github.com/Gavin-Qiao/vserve/issues"

[project.scripts]
vserve = "vserve.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vserve"]

[tool.pytest.ini_options]
testpaths = ["tests"]
